--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Siri恋爱人生模拟器 Ultimate</title>
+    <title>Siri恋爱人生模拟器</title>
     <style>
         :root {
             --main-color: #FFD700;
@@ -144,7 +144,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>💛 Siri恋爱人生模拟器 Ultimate 💛</h1>
+        <h1>💛 Siri恋爱人生模拟器 💛</h1>
         <div id="content"></div>
         <div class="buttons">
             <button onclick="nextStep()">下一步</button>
