--- a/index.html
+++ b/index.html
@@ -393,5 +393,11 @@ registerExtension({
         // 初始化
         restart();
     </script>
+    <body>
+    <h1>版权声明</h1>
+    <div class="copyright">
+        © 2023 网站修改提出者:肖奥辉<br>
+        本网站与文天玩WenTianPlay无任何所属，文天玩仅提供二级域名分开。
+    </div>
 </body>
 </html>
