--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ registerExtension({
         function restart() {
             updateContent({
                 text: "全新的故事线已开启...",
-                options: ["开始模拟-本网站2024年5月20日编写"]
+                options: ["开始模拟-本网站2024年5月20日建站"]
             });
         }
 
@@ -396,7 +396,7 @@ registerExtension({
     <body>
     <h1>版权声明</h1>
     <div class="copyright">
-        © 2023 网站修改提出者:肖奥辉<br>
+        © 2025 网站修改提出者:肖奥辉（2025年2月21日）<br>
         本网站与文天玩WenTianPlay无任何所属关系，文天玩仅提供二级域名分发。
     </div>
 </body>
