--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ registerExtension({
     <body>
     <h1>版权声明</h1>
     <div class="copyright">
-        © 2025 网站修改提出者:肖奥辉（2025年2月20日修改）<br>
+        © 2025 Reteja modifo proponita de: Xiao Aohui (modifita la 20-an de februaro 2025)<br>
         本网站与文天玩WenTianPlay无任何所属关系，文天玩仅提供二级域名分发。
     </div>
 </body>
