--- a/index.html
+++ b/index.html
@@ -393,11 +393,12 @@ registerExtension({
         // 初始化
         restart();
     </script>
-    <body>
-    <h1>版权声明</h1>
-    <div class="copyright">
-        © 2025 Reteja modifo proponita de: Xiao Aohui (modifita la 20-an de februaro 2025)<br>
-        本网站与文天玩WenTianPlay无任何所属关系，文天玩仅提供二级域名分发。
-    </div>
+
+<body>
+<div class="copyright">
+            © 2025 Reteja modifo proponita de: Xiao Aohui (modifita la 20-an de februaro 2025)<br>
+            本网站与<a href="https://WenTianPlay.com">文天玩WenTianPlay</a>无任何所属关系<br>
+            文天玩仅提供二级域名分发
+        </div>
 </body>
 </html>
