--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ registerExtension({
 
 <body>
 <div class="copyright">
-            © 2024 Reteja modifo proponita de: Xiao Aohui (modifita la 20-an de februaro 2025)<br>
+            © 2024 曹秋葵<br>
             本网站与<a href="https://WenTianPlay.com">文天玩WenTianPlay</a>无任何所属关系<br>
             文天玩仅提供二级域名分发
         </div>
